setup for user domain

--- a/device-manufacture-api/Makefile
+++ b/device-manufacture-api/Makefile
@@ -1,5 +1,16 @@
 build:
 	./mvnw clean verify
 
-start:
+start-local:build
 	./mvnw spring-boot:run -Dspring-boot.run.profiles=dev
+
+build:
+	mvn clean verify
+
+stop:
+	docker-compose down
+
+up:
+	docker-compose up -d
+
+start-db: up
