--- a/device-manufacture-api/src/main/resources/application-dev.yml
+++ b/device-manufacture-api/src/main/resources/application-dev.yml
@@ -1,17 +1,17 @@
 spring:
-  h2:
-    console.enabled: true
   datasource:
     url: jdbc:mysql://localhost:3306/device_manufacture_db
     username: default
     password: default
     driver-class-name: com.mysql.cj.jdbc.Driver
-
   jpa:
     hibernate:
-      ddl-auto: create-drop
-    database-platform: org.hibernate.dialect.MySQL5Dialect
+      ddl-auto: create
+    defer-datasource-initialization: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
   sql:
     init:
-      mode: never
+      mode: always
       platform: dev
