--- a/device-manufacture-api/src/test/resources/application.yml
+++ b/device-manufacture-api/src/test/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        format_sql: true
+        globally_quoted_identifiers: true
     database-platform: org.hibernate.dialect.H2Dialect
   sql:
     init:
