--- a/device-manufacture-api/docker-compose.yml
+++ b/device-manufacture-api/docker-compose.yml
@@ -1,17 +1,17 @@
+version: '3.8'
 services:
   db:
     image: mysql:8.0.29
-    platform: linux/x86_64
-    container_name: db
-    ports:
-      - "3306:3306"
+    cap_add:
+      - SYS_NICE
     restart: always
     environment:
-      MYSQL_DATABASE: device_manufacture_db
-      MYSQL_USER: default
-      MYSQL_PASSWORD: default
-      MYSQL_ROOT_PASSWORD: root
-    healthcheck:
-      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
-      timeout: 20s
-      retries: 10
+      - MYSQL_DATABASE=quotes
+      - MYSQL_ROOT_PASSWORD=root
+    ports:
+      - '3306:3306'
+    volumes:
+      - device-manufacture-db:/var/lib/mysql
+      - ./db/init:/docker-entrypoint-initdb.d/:ro
+volumes:
+  device-manufacture-db:
