--- a/device-manufacture-api/src/main/resources/application-staging.yml
+++ b/device-manufacture-api/src/main/resources/application-staging.yml
@@ -1,17 +1,15 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/device_manufacture_db_dev
+    url: jdbc:mysql://localhost:3306/device_manufacture_db_staging
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create
-    defer-datasource-initialization: true
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
   sql:
     init:
-      mode: always
-      platform: dev
+      mode: never
