update on build setup

--- a/device-manufacture-api/Makefile
+++ b/device-manufacture-api/Makefile
@@ -1,14 +1,22 @@
-build:
+build-api:
 	./mvnw clean verify
 
-start-local:build
+start-api-dev: build-api
 	./mvnw spring-boot:run -Dspring-boot.run.profiles=dev
 
-build:
-	mvn clean verify
+start-api-staging: build-api
+	./mvnw spring-boot:run -Dspring-boot.run.profiles=staging
 
 stop-db:
 	docker-compose down
 
 start-db:
 	docker-compose up -d
+
+start-dev:start-db build-api start-api-dev
+
+start-staging:start-db build-api start-api-staging
+
+
+
+
